src/App.css
.App {
  font-family: monospace;
}

.App .terminal {
    background: black;
    background-image: radial-gradient(
      rgba(255, 255, 255, 0.1), black 120%
    );
    color: white;
    filter: sepia(1) hue-rotate(60deg) saturate(4);
    font-size: 12px;
    line-height: 12px;
    margin: 0ex;
    width: 80ex;
    height: 43em;
    overflow: hidden;
    margin: auto auto 0em auto;
}

.App .terminal::selection {
    background: white;
    color: black;
    text-shadow: none;
}

.App .terminal img {
    filter:  grayscale(1);
    position: absolute;
    right: 4ex;
    top: 17em;
    width: 30ex;
    border: 1px solid white;
    z-index: -1;
}

.App .terminal::after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: repeating-linear-gradient(
      0deg,
      rgba(0,0,0, 0.25),
      rgba(0,0,0, 0.25) 1px,
      transparent 1px,
      transparent 2px
    );
    pointer-events: none;
}

pre {
  margin: 0;
}

